--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".MainActivity">
-    <item android:id="@+id/action_search"
-        android:title="@string/action_search"
+      tools:context=".NO_USE.MainActivity1">
+    <item android:id="@+id/action_chang_device"
+          android:title="@string/chang_device"
         android:orderInCategory="100"
         app:showAsAction="never"/>
     <item android:id="@+id/action_exit"
