--- a/app/src/main/res/layout/fragment_checkin.xml
+++ b/app/src/main/res/layout/fragment_checkin.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/bootstrap_brand_secondary_fill"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ScrollView
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
